--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.2",
     "jwt-decode": "^3.1.2",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
