--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@apollo/client": "^3.5.8",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.8.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
